# celerity-dataflow-benchmark

./: CMakeLists.txt
scripts/: plot.py
src/: benchmark_celerity.cc  benchmark_faux_celerity.cc  benchmark_mpi.cc  benchmark_sycl.cc
